update the nav menu style

--- a/extensions/site/Resources/Public/Scss/variables.scss
+++ b/extensions/site/Resources/Public/Scss/variables.scss
@@ -1,1 +1,62 @@
+@import 'fonts.scss';
 // Variables
+// colors :
+$color_1 :#ffffff;
+$color_2 :linear-gradient(to right, #4458dc 0%, #854fee 100%), radial-gradient(circle at top left, #4458dc, #854fee);;
+$color_3 :#4458dc;;
+$color_4 : #333333;
+$color_5 :#999999;
+
+//fonts 
+$font:'Pathway Gothic One';
+$font_1:'Open Sans';
+$font_2:'Palanquin';
+
+// break points
+$devices-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1400px
+);
+// container max-widths
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px,
+  xxl: 1320px
+);
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+  list-style-type: none;
+  text-decoration: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
+
+html {
+  font-size: 100%;
+  box-sizing: inherit;
+  scroll-behavior: smooth;
+}
+  html,body{
+    min-width: 100%;
+    overflow-x: hidden;
+    line-height: 26px;
+    font-size: 15px;
+    font-weight: 400;
+    font-family: $font;
+  }
+.hide{
+    display: none !important;
+}
+
