--- a/extensions/site/Resources/Private/Templates/Page/Default.html
+++ b/extensions/site/Resources/Private/Templates/Page/Default.html
@@ -27,7 +27,7 @@
 
 <f:section name="Main">
 <header>
-  <f:render partial="Header/Header" arguments="{_all}" />
+  <f:render partial="Header/Menu" arguments="{_all}" />
 </header>  
   <main>
     <v:content.render column="0" />
