--- a/extensions/site/Resources/Public/Scss/layout.scss
+++ b/extensions/site/Resources/Public/Scss/layout.scss
@@ -2,7 +2,10 @@
 @import 'variables';
 @import 'menu';
 @import 'listNews';
+@import 'aboutMe';
 @import 'CategoryNews';
+@import 'ContactMe';
+@import 'projects';
 
 // Modules
 // import your modules here
