--- a/extensions/site/Resources/Public/Scss/listNews.scss
+++ b/extensions/site/Resources/Public/Scss/listNews.scss
@@ -1,5 +1,7 @@
 .frame-type-news_newsliststicky{
-    margin-top: 100px;
+    margin-top: 70px;
+    overflow: hidden;
+    margin-bottom: 110px;
     .news-header{
         text-align: center;
         font-family: $font;
