--- a/extensions/site/Resources/Public/Scss/variables.scss
+++ b/extensions/site/Resources/Public/Scss/variables.scss
@@ -6,6 +6,7 @@ $color_2 :linear-gradient(to right, #4458dc 0%, #854fee 100%), radial-gradient(c
 $color_3 :#4458dc;
 $color_4 : #333333;
 $color_5 :#999999;
+$color_6 :#854fee;
 
 //fonts 
 $font:'Pathway Gothic One';
