--- a/extensions/site/Resources/Public/Scss/layout.scss
+++ b/extensions/site/Resources/Public/Scss/layout.scss
@@ -1,11 +1,12 @@
 // Variables
-@import 'variables';
-@import 'menu';
-@import 'listNews';
-@import 'aboutMe';
-@import 'CategoryNews';
-@import 'ContactMe';
-@import 'projects';
+@import 'variables.scss';
+@import 'menu.scss';
+@import 'listNews.scss';
+@import 'aboutMe.scss';
+@import 'CategoryNews.scss';
+@import 'ContactMe.scss';
+@import 'projects.scss';
+@import 'services.scss'
 
 // Modules
 // import your modules here
