--- a/extensions/site/Resources/Public/Scss/variables.scss
+++ b/extensions/site/Resources/Public/Scss/variables.scss
@@ -7,6 +7,7 @@ $color_3 :#4458dc;
 $color_4 : #333333;
 $color_5 :#999999;
 $color_6 :#854fee;
+$color_7:#04b4e0;
 
 //fonts 
 $font:'Pathway Gothic One';
