--- a/extensions/site/Resources/Private/Extensions/News/Partials/List/Item.html
+++ b/extensions/site/Resources/Private/Extensions/News/Partials/List/Item.html
@@ -5,122 +5,161 @@
 	=====================
 		Partials/List/Item.html
 -->
-<div class="article articletype-{newsItem.type}{f:if(condition: newsItem.istopnews, then: ' topnews')}" itemscope="itemscope" itemtype="https://schema.org/Article">
-	<div class="article_wrapper">
-
-
-	<n:excludeDisplayedNews newsItem="{newsItem}"/>
-	<!-- header -->
-	<f:if condition="{newsItem.mediaPreviews}">
-		<!-- media preview element -->
-		<f:then>
-			<n:link newsItem="{newsItem}" settings="{settings}" title="{newsItem.title}">
-			<div class="news-img-wrap">
-					<f:alias map="{mediaElement: newsItem.mediaPreviews.0}">
-						<f:if condition="{mediaElement.originalResource.type} == 2">
-							<f:image image="{mediaElement}" title="{mediaElement.originalResource.title}" alt="{mediaElement.originalResource.alternative}" loading="{settings.list.media.image.lazyLoading}" maxWidth="{f:if(condition: settings.media.maxWidth, then: settings.media.maxWidth, else: settings.list.media.image.maxWidth)}" maxHeight="{f:if(condition: settings.media.maxHeight, then: settings.media.maxHeight, else: settings.list.media.image.maxHeight)}"/>
-						</f:if>
-						<f:if condition="{mediaElement.originalResource.type} == 4">
-							<f:render partial="Detail/MediaVideo" arguments="{mediaElement: mediaElement}"/>
-						</f:if>
-						<f:if condition="{mediaElement.originalResource.type} == 5">
-							<f:image image="{mediaElement}" title="{mediaElement.originalResource.title}" alt="{mediaElement.originalResource.alternative}" loading="{settings.list.media.image.lazyLoading}" maxWidth="{f:if(condition: settings.media.maxWidth, then: settings.media.maxWidth, else: settings.list.media.image.maxWidth)}" maxHeight="{f:if(condition: settings.media.maxHeight, then: settings.media.maxHeight, else: settings.list.media.image.maxHeight)}"/>
-						</f:if>
-					</f:alias>
-			</div>
-		</n:link>
-		</f:then>
-		<f:else>
-			<f:if condition="{newsItem.falMedia.0.uid}">
+<f:if condition ="{settings.startingpoint} != 16">
+	<f:then>
+		<div class="article articletype-{newsItem.type}{f:if(condition: newsItem.istopnews, then: ' topnews')}" itemscope="itemscope" itemtype="https://schema.org/Article">
+			<div class="article_wrapper">
+			<n:excludeDisplayedNews newsItem="{newsItem}"/>
+			<!-- header -->
+			<f:if condition="{newsItem.mediaPreviews}">
+				<!-- media preview element -->
 				<f:then>
 					<n:link newsItem="{newsItem}" settings="{settings}" title="{newsItem.title}">
-						<f:image treatIdAsReference="1" src="{newsItem.falMedia.0.uid}"title="{mediaElement.originalResource.title}" alt="{mediaElement.originalResource.alternative}" loading="{settings.list.media.image.lazyLoading}" maxWidth="{f:if(condition: settings.media.maxWidth, then: settings.media.maxWidth, else: settings.list.media.image.maxWidth)}" maxHeight="{f:if(condition: settings.media.maxHeight, then: settings.media.maxHeight, else: settings.list.media.image.maxHeight)}"/>
-					</n:link>
+					<div class="news-img-wrap">
+							<f:alias map="{mediaElement: newsItem.mediaPreviews.0}">
+								<f:if condition="{mediaElement.originalResource.type} == 2">
+									<f:image image="{mediaElement}" title="{mediaElement.originalResource.title}" alt="{mediaElement.originalResource.alternative}" loading="{settings.list.media.image.lazyLoading}" maxWidth="{f:if(condition: settings.media.maxWidth, then: settings.media.maxWidth, else: settings.list.media.image.maxWidth)}" maxHeight="{f:if(condition: settings.media.maxHeight, then: settings.media.maxHeight, else: settings.list.media.image.maxHeight)}"/>
+								</f:if>
+								<f:if condition="{mediaElement.originalResource.type} == 4">
+									<f:render partial="Detail/MediaVideo" arguments="{mediaElement: mediaElement}"/>
+								</f:if>
+								<f:if condition="{mediaElement.originalResource.type} == 5">
+									<f:image image="{mediaElement}" title="{mediaElement.originalResource.title}" alt="{mediaElement.originalResource.alternative}" loading="{settings.list.media.image.lazyLoading}" maxWidth="{f:if(condition: settings.media.maxWidth, then: settings.media.maxWidth, else: settings.list.media.image.maxWidth)}" maxHeight="{f:if(condition: settings.media.maxHeight, then: settings.media.maxHeight, else: settings.list.media.image.maxHeight)}"/>
+								</f:if>
+							</f:alias>
+					</div>
+				</n:link>
 				</f:then>
 				<f:else>
-						<f:if condition="{settings.displayDummyIfNoMedia}">
-							<div class="news-img-wrap">
-								<span class="no-media-element">
-									<n:link newsItem="{newsItem}" settings="{settings}" title="{newsItem.title}">
-										<f:image src="{settings.list.media.dummyImage}" title="" alt="" loading="{settings.list.media.image.lazyLoading}" maxWidth="{f:if(condition: settings.media.maxWidth, then: settings.media.maxWidth, else: settings.list.media.image.maxWidth)}" maxHeight="{f:if(condition: settings.media.maxHeight, then: settings.media.maxHeight, else: settings.list.media.image.maxHeight)}"/>
-									</n:link>
-								</span>
-							</div>
-						</f:if>
+					<f:if condition="{newsItem.falMedia.0.uid}">
+						<f:then>
+							<n:link newsItem="{newsItem}" settings="{settings}" title="{newsItem.title}">
+								<f:image treatIdAsReference="1" src="{newsItem.falMedia.0.uid}"title="{mediaElement.originalResource.title}" alt="{mediaElement.originalResource.alternative}" loading="{settings.list.media.image.lazyLoading}" maxWidth="{f:if(condition: settings.media.maxWidth, then: settings.media.maxWidth, else: settings.list.media.image.maxWidth)}" maxHeight="{f:if(condition: settings.media.maxHeight, then: settings.media.maxHeight, else: settings.list.media.image.maxHeight)}"/>
+							</n:link>
+						</f:then>
+						<f:else>
+								<f:if condition="{settings.displayDummyIfNoMedia}">
+									<div class="news-img-wrap">
+										<span class="no-media-element">
+											<n:link newsItem="{newsItem}" settings="{settings}" title="{newsItem.title}">
+												<f:image src="{settings.list.media.dummyImage}" title="" alt="" loading="{settings.list.media.image.lazyLoading}" maxWidth="{f:if(condition: settings.media.maxWidth, then: settings.media.maxWidth, else: settings.list.media.image.maxWidth)}" maxHeight="{f:if(condition: settings.media.maxHeight, then: settings.media.maxHeight, else: settings.list.media.image.maxHeight)}"/>
+											</n:link>
+										</span>
+									</div>
+								</f:if>
+						</f:else>
+					</f:if>
 				</f:else>
 			</f:if>
-		</f:else>
-	</f:if>
-	
-	<div class="news_list_content-container">	
-	<!-- date -->
-	<span class="news-list-date">
-			<time itemprop="datePublished" datetime="{f:format.date(date:newsItem.datetime, format:'%d. %B %Y')}">
-				<f:format.date format="%d. %B %Y">{newsItem.datetime}</f:format.date>
-			</time>
-	</span>
+			
+			<div class="news_list_content-container">	
+			<!-- date -->
+			<span class="news-list-date">
+					<time itemprop="datePublished" datetime="{f:format.date(date:newsItem.datetime, format:'%d. %B %Y')}">
+						<f:format.date format="%d. %B %Y">{newsItem.datetime}</f:format.date>
+					</time>
+			</span>
+		
+			<div class="header">
+				<h3>
+					<n:link newsItem="{newsItem}" settings="{settings}" title="{newsItem.title}" additionalAttributes="{itemprop:'url'}">
+						<span itemprop="headline">{newsItem.title}</span>
+					</n:link>
+				</h3>
+			</div>
+		
+		<f:comment>
+			<!-- teaser -->
+			<div class="teaser-text">
+				<n:removeMediaTags>
+				<f:if condition="{newsItem.teaser}">
+					<f:then>
+						<div itemprop="description">{newsItem.teaser -> f:format.crop(maxCharacters: '{settings.cropMaxCharacters}', respectWordBoundaries:'1') -> f:format.html()}</div>
+					</f:then>
+					<f:else>
+						<div itemprop="description">{newsItem.bodytext -> f:format.crop(maxCharacters: '{settings.cropMaxCharacters}', respectWordBoundaries:'1') -> f:format.html()}</div>
+					</f:else>
+				</f:if>
+				</n:removeMediaTags>
+		
+				<n:link newsItem="{newsItem}" settings="{settings}" class="more" title="{newsItem.title}">
+					<i class="fas fa-greater-than" style="color: #ffffff;"></i> 
+					<span><f:translate key="more-link"/></span>
+				</n:link>
+			</div>
+		</f:comment>
+			<!-- footer information -->
+			<div class="footer">
+				<p>
+					<f:if condition="{newsItem.firstCategory}">
+						<!-- first category -->
+						<span class="news-list-category">{newsItem.firstCategory.title}</span>
+					</f:if>
+		
+					<f:if condition="{newsItem.tags}">
+						<!-- Tags -->
+						<div class="news-list-tags" itemprop="keywords">
+							<f:for each="{newsItem.tags}" as="tag">
+										{tag.title}
+							</f:for>
+						</div>
+					</f:if>
+		
+					<!-- author -->
+					<f:if condition="{newsItem.author}">
+						<span class="news-list-author">
+							<f:translate key="author" arguments="{0:newsItem.author}"/>
+						</span>
+					</f:if>
+				</p>
+			</div>
+		</div>
+		</div>
+		</div>
+	</f:then>
+	<f:else>
+		<div class="service">
+			<div class="service__box">
+				<div class="service__icon">
+					<f:if condition="{newsItem.falMedia.0.uid}">
+						<f:then>
+								<f:image treatIdAsReference="1" src="{newsItem.falMedia.0.uid}"title="{mediaElement.originalResource.title}" alt="{mediaElement.originalResource.alternative}" loading="{settings.list.media.image.lazyLoading}" maxWidth="{f:if(condition: settings.media.maxWidth, then: settings.media.maxWidth, else: settings.list.media.image.maxWidth)}" maxHeight="{f:if(condition: settings.media.maxHeight, then: settings.media.maxHeight, else: settings.list.media.image.maxHeight)}"/>
+						</f:then>
+						<f:else>
+								<f:if condition="{settings.displayDummyIfNoMedia}">
+									<div class="news-img-wrap">
+										<span class="no-media-element">
+												<f:image src="{settings.list.media.dummyImage}" title="" alt="" loading="{settings.list.media.image.lazyLoading}" maxWidth="{f:if(condition: settings.media.maxWidth, then: settings.media.maxWidth, else: settings.list.media.image.maxWidth)}" maxHeight="{f:if(condition: settings.media.maxHeight, then: settings.media.maxHeight, else: settings.list.media.image.maxHeight)}"/>
+										</span>
+									</div>
+								</f:if>
+						</f:else>
+					</f:if>
+				</div>
 
-	<div class="header">
-		<h3>
-			<n:link newsItem="{newsItem}" settings="{settings}" title="{newsItem.title}" additionalAttributes="{itemprop:'url'}">
-				<span itemprop="headline">{newsItem.title}</span>
-			</n:link>
-		</h3>
-	</div>
+				<div class="service__textheader">
+					<div class="header">
+						<h3>
+								<span itemprop="headline">{newsItem.title}</span>
+						</h3>
+					</div>
+				</div>
 
-<f:comment>
-	<!-- teaser -->
-	<div class="teaser-text">
-		<n:removeMediaTags>
-		<f:if condition="{newsItem.teaser}">
-			<f:then>
-				<div itemprop="description">{newsItem.teaser -> f:format.crop(maxCharacters: '{settings.cropMaxCharacters}', respectWordBoundaries:'1') -> f:format.html()}</div>
-			</f:then>
-			<f:else>
-				<div itemprop="description">{newsItem.bodytext -> f:format.crop(maxCharacters: '{settings.cropMaxCharacters}', respectWordBoundaries:'1') -> f:format.html()}</div>
-			</f:else>
-		</f:if>
-		</n:removeMediaTags>
-
-		<n:link newsItem="{newsItem}" settings="{settings}" class="more" title="{newsItem.title}">
-			<i class="fas fa-greater-than" style="color: #ffffff;"></i> 
-			<span><f:translate key="more-link"/></span>
-		</n:link>
-	</div>
-</f:comment>
-	<!-- footer information -->
-	<div class="footer">
-		<p>
-			<f:if condition="{newsItem.firstCategory}">
-				<!-- first category -->
-				<span class="news-list-category">{newsItem.firstCategory.title}</span>
-			</f:if>
-
-			<f:if condition="{newsItem.tags}">
-				<!-- Tags -->
-				<div class="news-list-tags" itemprop="keywords">
-					<f:for each="{newsItem.tags}" as="tag">
-						<f:if condition="{tag.title}== ichwillfair ">
+					<div class="service__textteaser">
+						<n:removeMediaTags>
+						<f:if condition="{newsItem.teaser}">
 							<f:then>
-								<span class="hashtag">ichwill<strong>fair</strong></span>
+								<div itemprop="description">{newsItem.teaser -> f:format.crop(maxCharacters: '{settings.cropMaxCharacters}', respectWordBoundaries:'1') -> f:format.html()}</div>
 							</f:then>
 							<f:else>
-								{tag.title}
+								<div itemprop="description">{newsItem.bodytext -> f:format.crop(maxCharacters: '{settings.cropMaxCharacters}', respectWordBoundaries:'1') -> f:format.html()}</div>
 							</f:else>
 						</f:if>
-					</f:for>
-				</div>
-			</f:if>
+					</n:removeMediaTags>
+					</div>
+			</div>
+		</div>
+	</f:else>
+</f:if> 
 
-			<!-- author -->
-			<f:if condition="{newsItem.author}">
-				<span class="news-list-author">
-					<f:translate key="author" arguments="{0:newsItem.author}"/>
-				</span>
-			</f:if>
-		</p>
-	</div>
-</div>
-</div>
-</div>
 </html>
