--- a/extensions/site/Resources/Public/Scss/categoryNews.scss
+++ b/extensions/site/Resources/Public/Scss/categoryNews.scss
@@ -15,12 +15,13 @@
             border-bottom:none;
         }
         ul{
+            padding-left: 15px;
             .category_select-list {
                 @media(min-width: map-get($devices-breakpoints,xl)){
                     display: none;
                 }
                 background-image: linear-gradient(#fff, #fff), radial-gradient(circle at top left, $color_4, $color_6);
-                border: 2px solid $color_6;
+                border: 2px solid $color_4;
                 background-clip: border-box;
                 max-width: 203px;
                 padding: 10px 15px;
@@ -56,7 +57,7 @@
                         display: flex !important;
                         flex-flow: column;
                         align-items: flex-start;
-                        border: 1px solid $color_6;
+                        border: 1px solid $color_4;
                         max-width: 203px;
                         overflow-x: auto;
                         overflow-y: hidden;
