create website footer content + Style

--- a/extensions/site/Resources/Private/Templates/Page/Default.html
+++ b/extensions/site/Resources/Private/Templates/Page/Default.html
@@ -32,7 +32,7 @@
   <main>
     <v:content.render column="0" />
   </main>
-  <footer>
+  <footer class="site-footer" role="contentinfo">
     <f:render partial="Footer/Footer" arguments="{_all}" />
   </footer>
 
