--- a/extensions/site/Resources/Public/Scss/layout.scss
+++ b/extensions/site/Resources/Public/Scss/layout.scss
@@ -6,7 +6,8 @@
 @import 'CategoryNews.scss';
 @import 'ContactMe.scss';
 @import 'projects.scss';
-@import 'services.scss'
+@import 'services.scss';
+@import 'footer.scss';
 
 // Modules
 // import your modules here
