--- a/extensions/site/Resources/Public/Scss/layout.css
+++ b/extensions/site/Resources/Public/Scss/layout.css
@@ -145,7 +145,7 @@ body > header .navbar_container .text-logo a .logo-symbol {
   width: 44px;
   height: 44px;
   line-height: 44px;
-  background-image: linear-gradient(to right, #4458dc 0%, #854fee 100%), radial-gradient(circle at top left, #4458dc, #854fee);
+  background-color: #04b4e0;
   border-radius: 100px;
   text-align: center;
   color: #fff;
@@ -177,7 +177,7 @@ body > header .navbar_container .humbarger {
     width: 30px;
     height: 3px;
     margin: 6px;
-    background: #4458dc;
+    background: #04b4e0;
     transform: rotate(0deg);
     transition: 0.25s ease-in-out;
     opacity: 1;
@@ -273,7 +273,7 @@ body > header .navbar_container .menu_list .menu_link a::after {
   left: 0;
   width: 100%;
   height: 3px;
-  background: #4458dc;
+  background: #04b4e0;
   transform: scaleX(0);
   transform-origin: right;
   transition: transform 0.5s;
@@ -566,9 +566,8 @@ body > header .navbar_container .menu .language_menu_container .language-menu a 
   border-radius: 5px;
   background-origin: border-box;
   background-clip: content-box, border-box;
-  background-image: linear-gradient(to right, #333333 0%, #854fee 100%), radial-gradient(circle at top left, #333333, #854fee);
+  background-color: #04b4e0;
   border: double 2px transparent;
-  box-shadow: 0px 10px 30px rgba(118, 85, 225, 0.3);
 }
 @media screen and (max-width: 576px) {
   #AboutMeSection .aboutMe__text-container .primary_btn {
@@ -577,7 +576,7 @@ body > header .navbar_container .menu .language_menu_container .language-menu a 
 }
 #AboutMeSection .aboutMe__text-container .primary_btn:hover {
   background-image: linear-gradient(#ffffff, #ffffff), radial-gradient(circle at top left, #333333, #854fee);
-  border: 2px solid #854fee;
+  border: 2px solid #04b4e0;
   color: #333333;
   box-shadow: none;
   background-clip: border-box;
@@ -602,9 +601,12 @@ body > header .navbar_container .menu .language_menu_container .language-menu a 
     border-bottom: none;
   }
 }
+.frame-type-news_categorylist .news ul {
+  padding-left: 15px;
+}
 .frame-type-news_categorylist .news ul .category_select-list {
   background-image: linear-gradient(#fff, #fff), radial-gradient(circle at top left, #333333, #854fee);
-  border: 2px solid #854fee;
+  border: 2px solid #333333;
   background-clip: border-box;
   max-width: 203px;
   padding: 10px 15px;
@@ -651,7 +653,7 @@ body > header .navbar_container .menu .language_menu_container .language-menu a 
     display: flex !important;
     flex-flow: column;
     align-items: flex-start;
-    border: 1px solid #854fee;
+    border: 1px solid #333333;
     max-width: 203px;
     overflow-x: auto;
     overflow-y: hidden;
@@ -803,4 +805,59 @@ body > header .navbar_container .menu .language_menu_container .language-menu a 
 
 .frame-type-news_newsliststicky {
   padding-top: 15px;
+}
+.frame-type-news_newsliststicky .service {
+  flex: 0 0 auto;
+  width: 33.3333%;
+  padding: 0 15px;
+}
+@media screen and (max-width: 992px) {
+  .frame-type-news_newsliststicky .service {
+    width: 50%;
+    margin-bottom: 15px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .frame-type-news_newsliststicky .service {
+    width: 100%;
+  }
+}
+.frame-type-news_newsliststicky .service__box {
+  padding: 30px;
+  transition: 0.2s all ease-out;
+  background: #fff;
+  z-index: 1;
+  position: relative;
+  border-bottom: 10px solid transparent;
+  border-radius: 4px;
+  font-size: 15px;
+  text-align: center;
+}
+.frame-type-news_newsliststicky .service__box:hover {
+  box-shadow: 0 2px 20px -3px rgba(0, 0, 0, 0.1);
+  transform: scale(1.05);
+  z-index: 2;
+  border-bottom: 10px solid #04b4e0;
+}
+.frame-type-news_newsliststicky .service__box .service__icon {
+  margin-bottom: 1rem;
+}
+.frame-type-news_newsliststicky .service__box .service__icon a img {
+  max-width: 60px;
+  height: auto;
+}
+.frame-type-news_newsliststicky .service__box .service__textheader {
+  margin-bottom: 1rem;
+}
+.frame-type-news_newsliststicky .service__box .service__textheader span {
+  font-family: "Open Sans";
+  font-weight: 400;
+  color: #333333;
+  text-transform: uppercase;
+}
+.frame-type-news_newsliststicky .service__box .service__textteaser p {
+  font-family: "Palanquin";
+  font-weight: 400;
+  color: #999999;
+  line-height: 35px;
 }/*# sourceMappingURL=layout.css.map */
