update mail configuration

--- a/extensions/site/Resources/Private/Extensions/News/Templates/Category/List.html
+++ b/extensions/site/Resources/Private/Extensions/News/Templates/Category/List.html
@@ -60,6 +60,7 @@
 		</f:for>
 		</f:then>
 		<f:else>
+			<div class="loader hide"></div>
 			<ul>
 				<header class="category_select-list ">
 					<h4 class="category_select-list__title">
