--- a/extensions/site/Resources/Private/Templates/Content/AboutMe.html
+++ b/extensions/site/Resources/Private/Templates/Content/AboutMe.html
@@ -26,7 +26,7 @@
                 <div class="aboutMe__image">
                     <div class="aboutMe__image-container">
                         <f:if condition="{image}">
-                            <f:image treatIdAsReference="1" src="{image.id}" title="{image.title}" alt="{image.alternative}"/>
+                            <f:image treatIdAsReference="1" src="{image.id}" title="{image.title}" alt="{image.alternative}" loading="lazy"/>
                         </f:if>
                     </div>
                 </div>
