--- a/extensions/site/Resources/Private/Templates/Content/ContactMe.html
+++ b/extensions/site/Resources/Private/Templates/Content/ContactMe.html
@@ -32,7 +32,7 @@
                         <div class="contact__content">
                             <div class="content-box">
                                 <div class="contact__icons">
-                                    <f:image treatIdAsReference="1" src="{contact.image}" class="icons"/>
+                                    <f:image treatIdAsReference="1" src="{contact.image}" class="icons" loading="lazy"/>
                                 </div>
                                 <h3 class="contact__title">
                                     <f:link.typolink class ="contact_details"parameter="{contact.cantact-link}"target="_blank">{contact.ContactLabel}</f:link.typolink>
