--- a/extensions/site/Resources/Public/Scss/contactMe.scss
+++ b/extensions/site/Resources/Public/Scss/contactMe.scss
@@ -1,8 +1,7 @@
 .frame-type-site_contactme{
     overflow: hidden;
-    padding: 70px 0;
+    padding: 120px 0 ;
     background-color: #f5f8fb;
-    margin-bottom: 110px;
     header{
         text-align: center;
         margin-bottom: 45px;
@@ -13,13 +12,13 @@
         }
         h2{
             font-family: $font;
-            font-weight: 400;
-            font-size: 42px;
+            font-size: 46px;
             margin-bottom: 25px;
         }
         h3{
             font-weight: 300;
-            font-size: 38px;
+            font-size: 26px;
+            color: $color_5;
         }
     }
     .contactMe{
@@ -45,7 +44,7 @@
                         text-align: center;
                         box-shadow: 0 4px 6px rgba(174, 190, 205, .3);
                         @media screen and (max-width : map-get($devices-breakpoints, lg)) {
-                            margin-bottom: 15px;
+                            margin-bottom: 35px;
                         }
                         .contact__icons{
                             background-color: #04b4e0;
